fixed overflow issue on example 01 and 01a

--- a/examples/01/variant_a/style.css
+++ b/examples/01/variant_a/style.css
@@ -5,3 +5,26 @@
   align-items: center;
   justify-content: center;
 }
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  margin-top: 2vh;
+  margin-left: 2vh;
+  position: absolute;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.round {
+  border-radius: 10px;
+}
